# lazyglab

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
scripts/: gen-formula.sh  install.sh
src/: app.rs  auth.rs  event.rs  main.rs  table_nav.rs  theme.rs
src/config/: mod.rs  types.rs
src/provider/: gitlab.rs  mod.rs  types.rs
src/ui/: auth_modal.rs  click_regions.rs  find_modal.rs  main_view.rs  mod.rs  pipeline_view.rs  settings_modal.rs  splash.rs
