[package]
name = "lazyglab"
version = "0.1.0"
edition = "2024"
description = "A TUI wrapper for GitLab and GitHub — PRs, pipelines, and more"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
color-eyre = "0.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-trait = "0.1"
dirs = "6"
futures = "0.3"
thiserror = "2"
tui-markdown = { version = "0.3", default-features = false }
ansi-to-tui = "8"
